--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "i-scraper": "./index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node_modules/.bin/mocha",
     "start": "node index.js"
   },
   "repository": {
@@ -31,5 +31,9 @@
     "prompt": "^1.0.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
+  },
+  "devDependencies": {
+    "mocha": "*",
+    "should": ">= 0.0.1"
   }
 }
