--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "node_modules/.bin/mocha",
+    "run": "node index.js",
     "start": "node index.js"
   },
   "repository": {
@@ -28,6 +29,7 @@
     "bluebird": "^3.5.0",
     "cheerio": "^1.0.0-rc.1",
     "fs-extra": "^3.0.1",
+    "json2csv": "^3.8.0",
     "prompt": "^1.0.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
